Bug fix: fixed order of proposals when selected.